--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
 
 }
+//apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -42,8 +43,11 @@ dependencies {
     implementation (name: 'connectionmanager-0.4.8.12_69930af_2022-03-28_1818', ext:'aar')
     implementation 'com.github.shripal17:DPadView:1.0.3'
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
+    //implementation "androidx.core:core-ktx:+"
+   // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 
-
-
+}
+repositories {
+    mavenCentral()
 }
