--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation (name: 'connectionmanager-0.4.8.12_69930af_2022-03-28_1818', ext:'aar')
     implementation 'com.github.shripal17:DPadView:1.0.3'
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
-    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
+    implementation fileTree(dir: 'libs', include: ['*.jar'], exclude: [])
     //implementation "androidx.core:core-ktx:+"
    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
