--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Remote Control Kebby Client Side"
         android:supportsRtl="true"
         android:theme="@style/AppThemeNoActionBar"
         android:fullBackupContent="@xml/backup_descriptor"
